--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/aos.js"></script>
+    <script src="./app.js"></script>
+    <script src="./aos.js"></script>
   </body>
 </html>
